fixed a little responsiveness on projects page and footer area to be cleaner on small screens

--- a/src/styles.css
+++ b/src/styles.css
@@ -21,32 +21,6 @@ body {
         0 0 35px black;
     animation: pulsate 2.5s infinite alternate;
 }
-/* 
-@keyframes pulsate {
-    100% {
-        text-shadow:
-            0 0 4px #fff,
-            0 0 11px #fff,
-            0 0 19px #fff,
-            0 0 40px white,
-            0 0 80px white,
-            0 0 90px white,
-            0 0 100px black,
-            0 0 150px black;
-    }
-
-    0% {
-        text-shadow:
-            0 0 2px #fff,
-            0 0 4px #fff,
-            0 0 6px #fff,
-            0 0 10px white,
-            0 0 45px white,
-            0 0 55px black,
-            0 0 70px black,
-            0 0 80px black;
-    }
-} */
 
 .otherProjects {
     width: 75%;
@@ -227,5 +201,12 @@ body {
     .aboutMe {
         margin: 0 15px !important;
         padding: 0 !important;
+    }
+    .homeTitle,
+    .homeSubtitle {
+        margin-left:40px !important;
+    }
+    .homeSubtitle{
+        margin-bottom: 20px !important;
     }
 }
